force-app/main/default/objects/Bank_Investment_Lead__c/Bank_Investment_Lead__c.object-meta.xml
<CustomObject>
    <label>Bank Investment Lead</label>
    <nameField>
        <label>Bank Investment Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Investment Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>