force-app/main/default/objects/Bank_Investment_Lead__c/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <label>Email Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>