force-app/main/default/objects/Bank_Investment_Lead__c/fields/Interested_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Interested_Scheme__c</fullName>
    <label>Interested Scheme</label>
    <length>30</length>
    <type>Text</type>
</CustomField>