force-app/main/default/objects/Bank_Investment_Lead__c/fields/Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Investment_Amount__c</fullName>
    <label>Investment Amount</label>
    <length>30</length>
    <type>Text</type>
</CustomField>